# SENA-crtm

./: CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  gpu_nvhpc.yml  linux_gnu.yml  linux_intel.yml  linux_nvhpc.yml  macos_gnu.yml  macos_intel.yml
ref/: .gitignore  CMakeLists.txt  README.md
ref/exe/: run.sh  run_cpu.sh  run_gpu1.sh  run_gpu2.sh
ref/src/: CMakeLists.txt  crtm_type.f90  crtm_utils.f90  kernel.F90  kernel_v1.F90  kernel_v2.F90  mt19937.f90
ref/test/: CMakeLists.txt
ref/test/tools/: CMakeLists.txt
test/test_output/: output.test
